# freqmut

./: Cargo.toml  LICENSE
src/: config.rs  data.rs  interp_zero_alloc.rs  lib.rs  main.rs  models.rs  neldermead.rs  tests.rs  utils.rs
src/inference/: cost_functions.rs  mod.rs  neldermead.rs  optimization.rs
src/models/: mod.rs  parameters.rs
