[package]
name = "freqmut"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] } 
csv = "1.3"
argmin = "0.10"
argmin-math = { version = "0.4", features = ["vec"] }
rayon = "1.8"
time = "0.3"
num-traits = "0.2"
statrs = "0.18.0"
quad_gk = "1.0.0"
egobox-doe = "0.32.0"

#[profile.release]
#debug = false
#strip = true      # Automatically strip symbols from the binary.
#lto = "fat"       # Enable Link-Time Optimizations.
#codegen-units = 1 # Maximize optimizations across the entire crate.
#panic = "abort"   # Abort on panic for a smaller and slightly faster binary.